--- a/snake/index.html
+++ b/snake/index.html
@@ -2,5 +2,6 @@
 <html>
     <head>
         <link rel="stylesheet" href="snake.css">
+        <script src="snake.js"></script>
     </head>
 </html>
