the box size + game mechs
took help from a video

--- a/snake/index.html
+++ b/snake/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport", content="width=device-width, inital=1">
+        <title>Snake</title>
         <link rel="stylesheet" href="snake.css">
         <script src="snake.js"></script>
     </head>
