--- a/snake/index.html
+++ b/snake/index.html
@@ -7,4 +7,10 @@
         <link rel="stylesheet" href="snake.css">
         <script src="snake.js"></script>
     </head>
+
+    <body>
+        <h1>Snake</h1>
+
+        <canvas id="board"></canvas>
+    </body>
 </html>
