--- a/snake/index.html
+++ b/snake/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport", content="width=device-width, inital=1">
+        <meta name="viewport", content="width=device-width, inital-scale=1">
         <title>Snake</title>
         <link rel="stylesheet" href="snake.css">
         <script src="snake.js"></script>
