--- a/snake/index.html
+++ b/snake/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport", content="width=device-width, initial-scale=1.0">
-        <title>Snake</title>
-        <link rel="stylesheet" href="snake.css">
-        <script src="snake.js"></script>
-    </head>
 
-    <body>
-        <h1>Snake</h1>
-        <canvas id="board"></canvas>
-    </body>
+<head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" , content="width=device-width, initial-scale=1.0">
+    <title>Snake</title>
+    <link rel="stylesheet" href="snake.css">
+    <script src="snake.js" defer></script>
+    <style>
+        #scoreboard {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            padding: 10px;
+            border: 2px solid black;
+            background-color: gray;
+            z-index: 10; 
+        }
+
+    </style>
+</head>
+
+<body>
+    <h1>Snake</h1>
+    <canvas id="board" height="750" width="750" style="border: 10px solid black;"></canvas>
+</body>
+
 </html>
