--- a/snake/index.html
+++ b/snake/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html>
 
 <head>
@@ -25,6 +25,22 @@
 <body>
     <h1>Snake</h1>
     <canvas id="board" height="750" width="750" style="border: 10px solid black;"></canvas>
-</body>
+    <div id="scoreboard2"></div>
+    <style>
+         #scoreboard2 { 
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            padding: 10px;
+            border: 2px solid black;
+            background-color: gray;
+            z-index: 10; 
+            color: yellow;
+
+
+         }
+    </style>
+
+    </body>
 
 </html>
