--- a/snake/index.html
+++ b/snake/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -29,10 +29,12 @@
     <style>
          #scoreboard2 { 
             position: absolute;
-            top: 10px;
-            left: 10px;
-            padding: 10px;
-            border: 2px solid black;
+            top: 130px;
+            right: 10px;
+            padding: 20px;
+            height: 650px;
+            width: 300px;
+            border: 3px solid black;
             background-color: gray;
             z-index: 10; 
             color: yellow;
