--- a/snake/index.html
+++ b/snake/index.html
@@ -37,6 +37,7 @@
             border: 3px solid black;
             background-color: gray;
             z-index: 10; 
+            font-size: 20px;
             color: yellow;
 
 
